fixed too many line breaks at end of displayparagraphs, put images into folder

--- a/disco/scripts/style.css
+++ b/disco/scripts/style.css
@@ -2,7 +2,6 @@
 
 html {
   height: 100%;
-  max-width: none;
 }
 
 body, tw-story
